[tool.poetry]
name = "mwp-reft"
version = "0.1.0"
description = ""
authors = ["xiaojin <xiaojinwhu10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "2.0.0"
torchaudio = "2.0.0"
transformers = "4.34.1"
accelerate = "0.23.0"
datasets = "2.14.6"
deepspeed = "0.11.1"
numpy = "1.24.3"
tqdm = "4.66.1"
sigfig = "1.3.3"
trl = "0.7.2"
scipy = "1.11.4"
prettytable = "3.9.0"
pebble = "5.0.6"
wandb = "<=0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
